@@ -1,3 +1,10 @@
 # introduction-to-design-patterns
 
+## runtime options
+```
+javac -encoding UTF-8 --enable-preview --release 13 -Xlint:preview
+java --enable-preview 
+```
+
+## resources
 [Task2-1](https://github.com/smicle/introduction-to-design-patterns/blob/master/task2-1/SingletonTest.java)
